fix scrollbar in FF

--- a/css/editor.css
+++ b/css/editor.css
@@ -25,7 +25,7 @@
 .editor .sb div {
   position: absolute;
   width: 1px;
-  left: -10px;
+  left: 0px;
 }
 
 .layer {
